# api-rust

./: .env.example  .gitignore  Cargo.toml
src/: main.rs  routes.rs
src/controllers/: user.rs
src/database/: db.rs
src/models/: user.rs
