[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }  # Para trabalhar com JSON
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.10"
dotenv = "0.15"  # Para carregar variáveis de ambiente
anyhow = "1"

